refactor(plc4j/s7): post merge cleanup